--- a/legal/cookie-policy.html
+++ b/legal/cookie-policy.html
@@ -42,7 +42,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <body class="body">
   <div data-collapse="medium" data-animation="over-left" data-duration="250" data-easing="ease-out" data-easing2="ease-in" data-doc-height="1" role="banner" class="navigation w-nav">
     <div class="nav-wrap">
-      <a href="../index.html" class="nav-logo-link w-nav-brand"><img src="../images/SP-Logo-BLACK.svg" width="145" alt="" class="logo-image"></a>
+      <a href="../index" class="nav-logo-link w-nav-brand"><img src="../images/SP-Logo-BLACK.svg" width="145" alt="" class="logo-image"></a>
       <div class="menu">
         <nav role="navigation" class="nav-items w-nav-menu">
           <div data-hover="1" data-delay="0" data-w-id="45b16a4a-73e9-0d18-9e54-de20285e9d42" class="dropdown w-dropdown">
@@ -52,19 +52,19 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             </div>
             <nav class="dropdown-list w-dropdown-list">
               <div class="dropdown-link-parent">
-                <a href="../build.html" class="dropdown-link w-dropdown-link">Builder</a>
+                <a href="../build" class="dropdown-link w-dropdown-link">Builder</a>
               </div>
               <div class="dropdown-link-parent">
-                <a href="../create.html" class="dropdown-link w-dropdown-link">Editor</a>
+                <a href="../create" class="dropdown-link w-dropdown-link">Editor</a>
               </div>
               <div class="dropdown-link-parent">
-                <a href="../manage.html" class="dropdown-link w-dropdown-link">Workflow</a>
+                <a href="../manage" class="dropdown-link w-dropdown-link">Workflow</a>
               </div>
               <div class="dropdown-link-parent">
-                <a href="../engage.html" class="dropdown-link w-dropdown-link">Engage &amp; Earn</a>
+                <a href="../engage" class="dropdown-link w-dropdown-link">Engage &amp; Earn</a>
               </div>
               <div class="dropdown-link-parent">
-                <a href="../hosting.html" class="dropdown-link w-dropdown-link">Hosting &amp; Performance</a>
+                <a href="../hosting" class="dropdown-link w-dropdown-link">Hosting &amp; Performance</a>
               </div>
             </nav>
           </div>
@@ -75,40 +75,40 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             </div>
             <nav class="dropdown-list w-dropdown-list">
               <div class="dropdown-link-parent">
-                <a href="../vs/wordpress.html" class="dropdown-link w-dropdown-link">Storipress vs WordPress</a>
+                <a href="../vs/wordpress" class="dropdown-link w-dropdown-link">Storipress vs WordPress</a>
               </div>
               <div class="dropdown-link-parent">
-                <a href="../vs/wix.html" class="dropdown-link w-dropdown-link">Storipress vs Wix, Squarespace</a>
+                <a href="../vs/wix" class="dropdown-link w-dropdown-link">Storipress vs Wix, Squarespace</a>
               </div>
               <div class="dropdown-link-parent">
-                <a href="../vs/medium.html" class="dropdown-link w-dropdown-link">Storipress vs Medium</a>
+                <a href="../vs/medium" class="dropdown-link w-dropdown-link">Storipress vs Medium</a>
               </div>
               <div class="dropdown-link-parent">
-                <a href="../vs/what-wordpress-really-costs-you.html" class="dropdown-link w-dropdown-link">WordPress: Hidden Costs</a>
+                <a href="../vs/what-wordpress-really-costs-you" class="dropdown-link w-dropdown-link">WordPress: Hidden Costs</a>
               </div>
             </nav>
           </div>
-          <a href="../pricing.html" class="nav-item w-nav-link">Pricing</a>
+          <a href="../pricing" class="nav-item w-nav-link">Pricing</a>
           <div class="mm-parent">
             <div class="mm-content-parent">
               <div class="mm-section-parent">
                 <h1 class="mm-heading">Features</h1>
-                <a href="../build.html" class="mm-button">Builder</a>
-                <a href="../create.html" class="mm-button">Editor</a>
-                <a href="../manage.html" class="mm-button">Workflow</a>
-                <a href="../engage.html" class="mm-button">Engage &amp; Earn</a>
-                <a href="../hosting.html" class="mm-button">Hosting &amp; Performance</a>
+                <a href="../build" class="mm-button">Builder</a>
+                <a href="../create" class="mm-button">Editor</a>
+                <a href="../manage" class="mm-button">Workflow</a>
+                <a href="../engage" class="mm-button">Engage &amp; Earn</a>
+                <a href="../hosting" class="mm-button">Hosting &amp; Performance</a>
               </div>
               <div class="mm-section-parent">
                 <h1 class="mm-heading">Storipress vs</h1>
-                <a href="../vs/wordpress.html" class="mm-button">vs WordPress</a>
-                <a href="../vs/wix.html" class="mm-button">vs Wix, Squarespace</a>
-                <a href="../vs/medium.html" class="mm-button">vs Medium</a>
-                <a href="../vs/what-wordpress-really-costs-you.html" class="mm-button">WordPress: Hidden Costs</a>
+                <a href="../vs/wordpress" class="mm-button">vs WordPress</a>
+                <a href="../vs/wix" class="mm-button">vs Wix, Squarespace</a>
+                <a href="../vs/medium" class="mm-button">vs Medium</a>
+                <a href="../vs/what-wordpress-really-costs-you" class="mm-button">WordPress: Hidden Costs</a>
               </div>
               <div class="mm-section-parent">
                 <h1 class="mm-heading">Pricing</h1>
-                <a href="../pricing.html" class="mm-button">Pricing</a>
+                <a href="../pricing" class="mm-button">Pricing</a>
               </div>
             </div>
           </div>
@@ -144,11 +144,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="div-block-1451">
       <h1 class="heading-24">Cookie Policy</h1>
       <div class="div-block-1452">
-        <a href="../legal/terms.html" class="legal-pagelinks">Terms of Service</a>
-        <a href="../legal/global-privacy-policy.html" class="legal-pagelinks">Global Privacy Policy</a>
-        <a href="../legal/publisher-agreement.html" class="legal-pagelinks">Publisher Agreement</a>
-        <a href="../legal/content-guidelines.html" class="legal-pagelinks">Content Guidelines</a>
-        <a href="../legal/cookie-policy.html" aria-current="page" class="legal-pagelinks w--current">Cookie Policy</a>
+        <a href="../legal/terms" class="legal-pagelinks">Terms of Service</a>
+        <a href="../legal/global-privacy-policy" class="legal-pagelinks">Global Privacy Policy</a>
+        <a href="../legal/publisher-agreement" class="legal-pagelinks">Publisher Agreement</a>
+        <a href="../legal/content-guidelines" class="legal-pagelinks">Content Guidelines</a>
+        <a href="../legal/cookie-policy" aria-current="page" class="legal-pagelinks w--current">Cookie Policy</a>
       </div>
     </div>
   </div>
@@ -157,8 +157,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <p class="legal-paragraph-text effective-date"><em>Effective date: 2 February, 2021</em></p>
       <p class="legal-paragraph-text">This Cookie Policy (“Policy”) explains how Storipress, a trading name of Albion Media Pty. Ltd. (&quot;Storipress&quot;, &quot;we&quot;, &quot;us&quot; and &quot;our&quot;) uses cookies and similar technologies (like web beacons) when you visit any of our websites that link to this Cookie Policy (such as www.storipress.com) (&quot;Websites&quot;).</p>
       <p class="legal-paragraph-text">It explains what these technologies are and why we use them, as well as your rights to control our use of them.</p>
-      <p class="legal-paragraph-text">In some cases, we may use cookies and similar technologies to collect Personal Information or information that becomes Personal Information if we combine it with other information. In such cases, the Storipress <a href="../legal/global-privacy-policy.html" class="link-6">Global Privacy Policy</a> will also apply.</p>
-      <p class="legal-paragraph-text">Capitalised terms that are not defined in this Policy have the meaning given them in our Storipress <a href="../legal/global-privacy-policy.html" class="link-6">Global Privacy Policy</a> or our <a href="../legal/terms.html" class="link-6">Terms of Service</a>.</p>
+      <p class="legal-paragraph-text">In some cases, we may use cookies and similar technologies to collect Personal Information or information that becomes Personal Information if we combine it with other information. In such cases, the Storipress <a href="../legal/global-privacy-policy" class="link-6">Global Privacy Policy</a> will also apply.</p>
+      <p class="legal-paragraph-text">Capitalised terms that are not defined in this Policy have the meaning given them in our Storipress <a href="../legal/global-privacy-policy" class="link-6">Global Privacy Policy</a> or our <a href="../legal/terms" class="link-6">Terms of Service</a>.</p>
       <h1 class="heading-25">What cookies are</h1>
       <p class="legal-paragraph-text">A cookie is a small software file stored temporarily or placed on your computer’s hard drive. The main purpose of a cookie is to allow a web server to identify a user’s computer and web browser and tailor web pages and/or login information to a user’s preferences. Cookies help us promptly display the information needed to use the capabilities on the Service and other information which we consider to be of interest to visitors to the Sites and users of the Service. By gathering and remembering information about website preferences through cookies, we can provide a better web and marketing experience. Cookies do not give us access to your computer.</p>
     </div>
@@ -186,7 +186,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <p class="legal-paragraph-text">If you use a different browser, please refer to your browser’s documentation. You can also find out more about how to change your browser cookie settings at <a href="http://www.allaboutcookies.org" class="link-6">www.allaboutcookies.org</a>.</p>
       <h1 class="heading-25">Advertising and/or analytics cookies Storipress uses and how to control them</h1>
       <p class="legal-paragraph-text">We use third-party advertising and analytics tools to help us measure traffic and usage trends for the Service and to share offers with individuals who may be interested in our Services. The Services primarily use the following advertising and/or analytical tools, for which we include relevant privacy information and opt-out options:</p>
-      <p class="legal-paragraph-text"><strong>Google Analytics and Google Adwords:</strong> Google’s ability to use and share information collected by Google Analytics is restricted by the <a href="https://www.google.com/analytics/terms/us.html" target="_blank" class="link-6">Google Analytics Terms of Service</a> and the <a href="https://policies.google.com/privacy" target="_blank" class="link-6">Google Privacy Policy</a>. You may also <a href="https://policies.google.com/technologies/partner-sites" target="_blank" class="link-6">learn more about how Google collects and processes data</a> specifically in connection with Google Analytics. You may prevent your data from being used by Google Analytics by downloading and installing the <a href="https://tools.google.com/dlpage/gaoptout/" target="_blank" class="link-6">Google Analytics Opt-out Browser Add-on</a>.</p>
+      <p class="legal-paragraph-text"><strong>Google Analytics and Google Adwords:</strong> Google’s ability to use and share information collected by Google Analytics is restricted by the <a href="https://www.google.com/analytics/terms/us" target="_blank" class="link-6">Google Analytics Terms of Service</a> and the <a href="https://policies.google.com/privacy" target="_blank" class="link-6">Google Privacy Policy</a>. You may also <a href="https://policies.google.com/technologies/partner-sites" target="_blank" class="link-6">learn more about how Google collects and processes data</a> specifically in connection with Google Analytics. You may prevent your data from being used by Google Analytics by downloading and installing the <a href="https://tools.google.com/dlpage/gaoptout/" target="_blank" class="link-6">Google Analytics Opt-out Browser Add-on</a>.</p>
       <p class="legal-paragraph-text"><strong>Facebook Pixel and Remarketing Service:</strong> Facebook’s use of information collected is set forth in its <a href="https://web.archive.org/web/20161129190620/https:/www.facebook.com/privacy/explanation" target="_blank" class="link-6">Privacy Policy</a>. You may <a href="https://www.facebook.com/about/ads/#568137493302217" target="_blank" class="link-6">opt out of Facebook’s interest-based ads</a>.</p>
       <p class="legal-paragraph-text"><strong>Hotjar Behavioural Analytics:</strong> Hotjar&#x27;s use of information collected is set forth in its <a href="https://www.hotjar.com/legal/policies/privacy/" target="_blank" class="link-6">Privacy Policy</a>. You may <a href="https://www.hotjar.com/privacy/do-not-track/" target="_blank" class="link-6">opt out of Hotjar&#x27;s behavioural analytics tracking</a>.</p>
       <p class="legal-paragraph-text">We use third-party advertising and analytics tools to help us measure traffic and usage trends for the Service and to share offers with individuals who may be interested in our Services. The Services primarily use the following advertising and/or analytical tools, for which we include relevant privacy information and opt-out options:</p>
@@ -206,7 +206,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="footer-flex-container">
       <div class="div-block-1402">
         <div class="footer-logo-contact-div">
-          <a href="../index.html" class="footer-logo-link w-inline-block"><img src="../images/SP-Logo-WHITE.svg" width="152" alt="" class="footer-logo-image"></a>
+          <a href="../index" class="footer-logo-link w-inline-block"><img src="../images/SP-Logo-WHITE.svg" width="152" alt="" class="footer-logo-image"></a>
           <div class="footer-text location">Sydney, Australia<br>Taipei + Taichung, Taiwan<br></div>
           <div class="div-block-3">
             <a href="mailto:hello@storipress.com?subject=To%20my%20mates%20%40%20Storipress%20..." class="footer-contact-buttons w-inline-block"><img src="../images/email.svg" loading="lazy" alt="Email symbol"></a>
@@ -220,22 +220,22 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <h5 class="footer-list-heading">Product</h5>
             <ul role="list" class="w-list-unstyled">
               <li>
-                <a href="../manage.html" class="footer-text">Workflow</a>
+                <a href="../manage" class="footer-text">Workflow</a>
               </li>
               <li>
-                <a href="../create.html" class="footer-text">Editor</a>
+                <a href="../create" class="footer-text">Editor</a>
               </li>
               <li>
-                <a href="../build.html" class="footer-text">Builder</a>
+                <a href="../build" class="footer-text">Builder</a>
               </li>
               <li>
-                <a href="../engage.html" class="footer-text">Engage &amp; Earn</a>
+                <a href="../engage" class="footer-text">Engage &amp; Earn</a>
               </li>
               <li>
-                <a href="../hosting.html" class="footer-text">Hosting &amp; Performance</a>
+                <a href="../hosting" class="footer-text">Hosting &amp; Performance</a>
               </li>
               <li>
-                <a href="../pricing.html" class="footer-text">Pricing</a>
+                <a href="../pricing" class="footer-text">Pricing</a>
               </li>
             </ul>
           </div>
@@ -243,16 +243,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <h5 class="footer-list-heading">Compare</h5>
             <ul role="list" class="w-list-unstyled">
               <li>
-                <a href="../vs/wordpress.html" class="footer-text">WordPress</a>
+                <a href="../vs/wordpress" class="footer-text">WordPress</a>
               </li>
               <li>
-                <a href="../vs/wix.html" class="footer-text">Wix</a>
+                <a href="../vs/wix" class="footer-text">Wix</a>
               </li>
               <li>
-                <a href="../vs/medium.html" class="footer-text">Medium</a>
+                <a href="../vs/medium" class="footer-text">Medium</a>
               </li>
               <li>
-                <a href="../vs/wordpress.html" class="footer-text">WordPress: Hidden Costs</a>
+                <a href="../vs/wordpress" class="footer-text">WordPress: Hidden Costs</a>
               </li>
             </ul>
           </div>
@@ -264,19 +264,19 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="text-block-61">We&#x27;re hiring!</div>
               </li>
               <li>
-                <a href="../legal/terms.html" class="footer-text">Terms of Service</a>
+                <a href="../legal/terms" class="footer-text">Terms of Service</a>
               </li>
               <li>
-                <a href="../legal/global-privacy-policy.html" class="footer-text">Global Privacy Policy</a>
+                <a href="../legal/global-privacy-policy" class="footer-text">Global Privacy Policy</a>
               </li>
               <li>
-                <a href="../legal/publisher-agreement.html" class="footer-text">Publisher Agreement</a>
+                <a href="../legal/publisher-agreement" class="footer-text">Publisher Agreement</a>
               </li>
               <li>
-                <a href="../legal/content-guidelines.html" class="footer-text">Content Guidelines</a>
+                <a href="../legal/content-guidelines" class="footer-text">Content Guidelines</a>
               </li>
               <li>
-                <a href="../legal/cookie-policy.html" aria-current="page" class="footer-text w--current">Cookie Policy</a>
+                <a href="../legal/cookie-policy" aria-current="page" class="footer-text w--current">Cookie Policy</a>
               </li>
             </ul>
           </div>
@@ -289,7 +289,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <script src="../js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <!--  Google Tag Manager (noscript)  -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5WLPRZG" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <noscript><iframe src="https://www.googletagmanager.com/ns?id=GTM-5WLPRZG" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!--  End Google Tag Manager (noscript)  -->
   <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
   <script>
