updated graphql copy pricing

--- a/pricing.html
+++ b/pricing.html
@@ -276,7 +276,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="text-block-62">Publish without the Storipress badge<br></div>
           </div>
           <div class="div-block-1471"><img src="images/Tick.svg" loading="lazy" alt="" class="pricingtable-tick">
-            <div class="text-block-62">GraphQL API access (upcoming)<br></div>
+            <div class="text-block-62">GraphQL API to connect to custom front-end solutions and create automations (upcoming)<br></div>
           </div>
         </div>
         <div class="pricing-column-parent learnmore">
@@ -445,7 +445,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="feat hovertext">Public GraphQL API (upcoming)</div>
         <div data-w-id="7d4b0091-382f-d5f4-94ed-6a3aa9a1cd1e" class="tooltip-trigger feattable _6th">
           <div class="tooltip feats">
-            <div>Post launch, Storipress will be releasing our public GraphQL-based API you can use to create automations for your publication.<br></div>
+            <div>Post launch, Storipress will be releasing our public GraphQL-based API you can use to connect Storipress to a custom front-end as well as create custom automations.<br></div>
             <div class="tooltip-arrow"></div>
           </div>
         </div>
