updated infinity scroll copy

--- a/pricing.html
+++ b/pricing.html
@@ -398,7 +398,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="feat hovertext">Infinity scroll</div>
         <div data-w-id="4f2bcf09-6291-7dee-90a8-d17305ad06c7" class="tooltip-trigger feattable _4th">
           <div class="tooltip feats">
-            <div>Storipress implements user article navigation on your publication in an infinite scroll. Infinite scrolls mimic social feeds, and on average increase visitor retention by 20%. However, conventional implementations are not optimised for SEO due to its technical difficulty. Storipress&#x27; infinite scroll is optimised for publishers.<br></div>
+            <div>Users navigate your articles on an infinite scroll. Infinite scrolls mimic social feeds and increase pageviews by 20%. Conventional infinite scrolls have poor SEO, but Storipress&#x27; Storipress' infinite scroll is optimised for SEO<br></div>
             <div class="tooltip-arrow"></div>
           </div>
         </div>
